# werkzeug

./: .appveyor.yml  .azure-pipelines.yml  .coveragerc  .flake8  .git-blame-ignore-revs  .git-fsck-skiplist  .gitattributes  .gitignore  .hgignore  .hgtags  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  404.rst  AUTHORS  CHANGES  CHANGES.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  Response.py  THANKS  app_authKey.py  appveyor.yml  azure-pipelines.yml  community.rst  config.yml  ez_setup.py  index.rst  pyproject.toml  run-tests.py  setup.cfg  setup.py  tox.ini  werkzeug-bootstrap  werkzeug-import-rewrite.py  werkzeug-serve  (+1 more)
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  config.yaml  config.yml  feature-request.md
.github/workflows/: ci.yml  lock.yml  pre-commit.yaml  publish.yaml  tests.yaml  zizmor.yaml
_templates/: layout.html
bench/: wzbench.py
changes.d/: 1474.feature.rst  1477.removal.rst  1487.removal.rst  1495.bugfix.rst  towncrier_template.rst  x.misc.rst
docs/: Makefile  changes.rst  conf.py  contents.rst.inc  datastructures.rst  debug.rst  exceptions.rst  filesystem.rst  generate.py  http.rst  index.rst  installation.rst  latexindex.rst  levels.rst  local.rst  make.bat  makearchive.py  middlewares.rst  python3.rst  quickstart.rst  request_data.rst  requirements.txt  routing.rst  script.rst  serving.rst  templates.rst  terms.rst  test.rst  transition.rst  tutorial.rst  unicode.rst  urls.rst  utils.rst  werkzeug-bootstrap.1  werkzeugext.py  werkzeugstyle.sty  wrappers.rst  wsgi.rst
docs/_docs/: make.bat  serving.rst
docs/_static/: style.css
docs/_templates/: genindex.html  layout.html  search.html  sidebarintro.html  sidebarlogo.html
docs/_themes/: LICENSE  werkzeug_theme_support.py
docs/contrib/: atom.rst  cache.rst  fixers.rst  index.rst  iterio.rst  lint.rst  profiler.rst  securecookie.rst  sessions.rst  wrappers.rst
docs/deployment/: apache-httpd.rst  cgi.rst  django.rst  fastcgi.rst  gunicorn.rst  index.rst  mod_wsgi.rst  nginx.rst  proxy_fix.rst  proxying.rst  waitress.rst
docs/middleware/: dispatcher.rst  http_proxy.rst  index.rst  lint.rst  profile.rst  profiler.rst  proxy_fix.rst  shared_data.rst
docs/newdocs/: Makefile  index.rst  text.rst  utils.rst
docs/src/: api_stability.txt  bootstrap.txt  bootstrapping.txt  debug.txt  deploying.txt  exceptions.txt  index.txt  installation.txt  libraries.txt  local.txt  minitmpl.txt  organizing.txt  routing.txt  script.txt  serving.txt  templates.txt  terms.txt  test.txt  tutorial.txt  tutorial_de.txt  unicode.txt  utils.txt  wrappers.txt  wsgihowto.txt
e/shorty/: index.rst
examples/: README  README.rst  complex_routing.py  cookieauth.py  httpbasicauth.py  manage-coolmagic.py  manage-couchy.py  manage-cupoftee.py  manage-i18nurls.py  manage-plnt.py  manage-shorty.py  manage-simplewiki.py  manage-webpylike.py  minimal.py  start-coolmagic.py  start-i18nurls.py  upload.py  wsecho.py
examples/contrib/: README  securecookie.py  sessions.py
examples/coolmagic/: __init__.py  application.py  helpers.py  utils.py
examples/couchy/: README  application.py  models.py  utils.py  views.py
examples/cupoftee/: __init__.py  application.py  db.py  network.py  pages.py  utils.py
examples/i18nurls/: __init__.py  application.py  urls.py  views.py
examples/partial/: README  complex_routing.py
examples/plnt/: __init__.py  database.py  sync.py  utils.py  views.py  webapp.py
examples/shortly/: shortly.py
examples/shorty/: application.py  models.py  utils.py  views.py
examples/simplewiki/: __init__.py  actions.py  application.py  database.py  specialpages.py  utils.py
examples/webpylike/: example.py  webpylike.py
newdocs/: conf.py  exceptions.rst  index.rst  installation.rst  local.rst  templates.rst  unicode.rst  utils.rst  werkzeugext.py  wrappers.rst
newdocs/_static/: style.css  werkzeug.js
requirements/: dev.txt  docs.in  docs.txt  tests.in  tests.txt  tests38.txt  typing.in  typing.txt
scripts/: make-release.py
src/werkzeug/: __init__.py  _compat.py  _internal.py  _reloader.py  _urls.py  datastructures.py  datastructures.pyi  exceptions.py  filesystem.py  formparser.py  http.py  local.py  posixemulation.py  routing.py  security.py  serving.py  test.py  testapp.py  types.py  urls.py  user_agent.py  useragents.py  utils.py  wsgi.py
static/: style.css
tests/: __init__.py  conftest.py  run_dev_server.py  test_compat.py  test_datastructures.py  test_debug.py  test_exceptions.py  test_formparser.py  test_http.py  test_internal.py  test_local.py  test_middleware.py  test_parser.py  test_parsing.py  test_routing.py  test_security.py  test_send_file.py  test_serving.py  test_templates.py  test_test.py  test_urls.py  test_useragents.py  test_utils.py  test_wrappers.py  test_wsgi.py
tests/contrib/: __init__.py  test_atom.py  test_cache.py  test_fixers.py  test_iterio.py  test_lint.py  test_securecookie.py  test_sessions.py  test_testtools.py  test_wrappers.py
tests/hypothesis/: test_urls.py
tests/live_apps/: data_app.py  reloader_app.py  run.py  standard_app.py  streaming_app.py
tests/middleware/: test_dispatcher.py  test_http_proxy.py  test_lint.py  test_profiler.py  test_proxy_fix.py  test_shared_data.py
tests/multipart/: collect.py  ie7_full_path_request.http  test_collect.py
tests/res/: bar.py  chunked.txt  index.html
tests/sansio/: test_multipart.py  test_request.py  test_utils.py
tests/test_apps/: __init__.py  chunked_encoding_app.py  debug_app.py  proxy_app.py  reloader_app.py  reloader_real_app.py  standard_app.py  stdlib_ssl_app.py
werkzeug/: __init__.py  _compat.py  _cookies.py  _internal.py  _reloader.py  _urlparse.py  bootstrapping.py  constants.py  datastructures.py  exceptions.py  filesystem.py  formparser.py  http.py  immutables.py  local.py  minitmpl.py  posixemulation.py  routing.py  script.py  security.py  serving.py  templates.py  test.py  testapp.py  urls.py  useragents.py  utils.py  wrappers.py  wsgi.py
werkzeug/contrib/: atom.py  (+17 more)
(+215 files in other folders)
