[metadata]
license_file = LICENSE.rst
long_description_content_type = text/x-rst

[tool:pytest]
testpaths = tests
filterwarnings =
    error
    ignore::requests.packages.urllib3.exceptions.InsecureRequestWarning
    ; warning about collections.abc fixed in watchdog master
    ignore::DeprecationWarning:watchdog.utils.bricks:175

[coverage:run]
branch = True
source =
    werkzeug
    tests

[coverage:paths]
source =
    src
    */site-packages

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit-str-concat
select = B, E, F, W, B9, ISC
ignore =
    # slice notation whitespace, invalid
    E203
    # import at top, too many circular import fixes
    E402
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 80
per-file-ignores =
    # __init__ modules export names
    **/__init__.py: F401
    # LocalProxy assigns lambdas
    src/werkzeug/local.py: E731
