[metadata]
name = Werkzeug
version = attr: werkzeug.__version__
url = https://palletsprojects.com/p/werkzeug/
project_urls =
    Donate = https://palletsprojects.com/donate
    Documentation = https://werkzeug.palletsprojects.com/
    Changes = https://werkzeug.palletsprojects.com/changes/
    Source Code = https://github.com/pallets/werkzeug/
    Issue Tracker = https://github.com/pallets/werkzeug/issues/
    Twitter = https://twitter.com/PalletsTeam
    Chat = https://discord.gg/pallets
license = BSD-3-Clause
author = Armin Ronacher
author_email = armin.ronacher@active-4.com
maintainer = Pallets
maintainer_email = contact@palletsprojects.com
description = The comprehensive WSGI web application library.
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
package_dir = = src
include_package_data = True
python_requires = >= 3.7
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
filterwarnings =
    error
markers =
    dev_server: tests that start the dev server

[coverage:run]
branch = True
source =
    werkzeug
    tests

[coverage:paths]
source =
    src
    */site-packages

[mypy]
files = src/werkzeug
python_version = 3.7
show_error_codes = True
allow_redefinition = True
disallow_subclassing_any = True
# disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
no_implicit_optional = True
local_partial_types = True
no_implicit_reexport = True
strict_equality = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = True
warn_return_any = True
# warn_unreachable = True

[mypy-werkzeug.wrappers]
no_implicit_reexport = False

[mypy-colorama.*]
ignore_missing_imports = True

[mypy-cryptography.*]
ignore_missing_imports = True

[mypy-eventlet.*]
ignore_missing_imports = True

[mypy-gevent.*]
ignore_missing_imports = True

[mypy-greenlet.*]
ignore_missing_imports = True

[mypy-watchdog.*]
ignore_missing_imports = True

[mypy-xprocess.*]
ignore_missing_imports = True
